--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,25 +18,26 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build and push Docker images
-        env:
-          REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
-          REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
+      - name: Log in to Docker registry
+        run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
+
+      - name: Build and push Docker image for dg-backend
         run: |
           cd dg-backend
-          echo ${{ secrets.REGISTRY_PASSWORD }} | docker login -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
-          docker buildx create --use --name mybuilder
-          docker buildx build --push --platform linux/amd64,linux/arm64 --tag cstrab/dg-backend:latest .
+          docker buildx build --platform linux/amd64,linux/arm64 --tag cstrab/dg-backend:latest .
+          docker images
           docker push cstrab/dg-backend:latest
 
+      - name: Build and push Docker image for dg-database
+        run: |
           cd ../dg-database
-          echo ${{ secrets.REGISTRY_PASSWORD }} | docker login -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
-          docker buildx create --use --name mybuilder
-          docker buildx build --push --platform linux/amd64,linux/arm64 --tag cstrab/dg-database:latest .
+          docker buildx build --platform linux/amd64,linux/arm64 --tag cstrab/dg-database:latest .
+          docker images
           docker push cstrab/dg-database:latest
 
+      - name: Build and push Docker image for dg-frontend
+        run: |
           cd ../dg-frontend
-          echo ${{ secrets.REGISTRY_PASSWORD }} | docker login -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
-          docker buildx create --use --name mybuilder
-          docker buildx build --push --platform linux/amd64,linux/arm64 --tag cstrab/dg-frontend:latest .
+          docker buildx build --platform linux/amd64,linux/arm64 --tag cstrab/dg-frontend:latest .
+          docker images
           docker push cstrab/dg-frontend:latest
