--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,29 +15,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
       - name: Log in to Docker registry
         run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
 
       - name: Build and push Docker image for dg-backend
         run: |
           cd dg-backend
-          docker buildx build --platform linux/amd64,linux/arm64 --tag cstrab/dg-backend:latest .
-          docker images
-          docker push cstrab/dg-backend:latest
+          docker build -t ${{ secrets.REGISTRY_USERNAME }}/dg-backend:latest .
+          docker push ${{ secrets.REGISTRY_USERNAME }}/dg-backend:latest
 
       - name: Build and push Docker image for dg-database
         run: |
           cd ../dg-database
-          docker buildx build --platform linux/amd64,linux/arm64 --tag cstrab/dg-database:latest .
-          docker images
-          docker push cstrab/dg-database:latest
+          docker build -t ${{ secrets.REGISTRY_USERNAME }}/dg-database:latest .
+          docker push ${{ secrets.REGISTRY_USERNAME }}/dg-database:latest
 
       - name: Build and push Docker image for dg-frontend
         run: |
           cd ../dg-frontend
-          docker buildx build --platform linux/amd64,linux/arm64 --tag cstrab/dg-frontend:latest .
-          docker images
-          docker push cstrab/dg-frontend:latest
+          docker build -t ${{ secrets.REGISTRY_USERNAME }}/dg-frontend:latest .
+          docker push ${{ secrets.REGISTRY_USERNAME }}/dg-frontend:latest
