--- a/ingress.yml
+++ b/ingress.yml
@@ -4,14 +4,14 @@ metadata:
   name: dg-app-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
   - host: dg-app.strab.io
     http:
       paths:
       - pathType: Prefix
-        path: /backend(/|$)(.*)
+        path: /backend/(.*)
         backend:
           service:
             name: dg-backend
