--- a/dg-frontend/Dockerfile
+++ b/dg-frontend/Dockerfile
@@ -1,9 +1,6 @@
 # Use base node image for the build stage
 FROM node:18.16.0 as build
 
-# Default local testing environment variable
-ENV API_URL="http://localhost:8000"
-
 # Set the working directory in the container to /app
 WORKDIR /app
 
@@ -31,5 +28,12 @@ COPY default.conf /etc/nginx/conf.d/
 # Copy the built files from the build stage to the nginx html directory
 COPY --from=build /app/build /usr/share/nginx/html
 
+# Add a new entrypoint file
+COPY ./entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
 # Expose port 3000 for the application
 EXPOSE 3000
+
+# Make the entrypoint file the default command for the container
+CMD ["/entrypoint.sh"]
