--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,5 +46,6 @@ jobs:
           git config --global user.email 'github-actions@github.com'
           git add dg-app/values.yaml
           git commit -m "update image tags"
-          git push https://${{ secrets.PERSONAL_ACCESS_TOKEN }}:x-oauth-basic@github.com/cstrab/dg-app.git
+          git push https://${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/cstrab/dg-app.git
+
 
