--- a/dg-app/Chart.yaml
+++ b/dg-app/Chart.yaml
@@ -10,6 +10,6 @@ dependencies:
   - name: dg-backend
     version: 0.1.0
     repository: "file://../dg-backend"
-  - name: dg-database
-    version: 0.1.0
-    repository: "file://../dg-database"
+  - name: postgresql
+    version: 12.1.2
+    repository: "https://charts.bitnami.com/bitnami"
